# social-link-service

./: .env  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  openapi.yml  pyproject.toml
.github/workflows/: CI.yml
src/: __main__.py
src/social_links_service/: __init__.py  create_app.py  settings.py
src/social_links_service/api/: __init__.py  app_status.py
src/social_links_service/api/v1/communications/: core.py
src/social_links_service/codegen/: main.py  models.py  views.py
src/social_links_service/db/: create_tables.py  sql_models.py
templates/fastapi/: main.jinja2  views.jinja2
tests/: conftest.py
tests/api/: test_ping.py
tests/api/v1/: test_communications.py
