[tool.poetry]
name = "social_links_service"
version = "0.1.0"
description = "Social links service"
authors = ["Dmitry Klimenko <sharknoise@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"
pydantic = { extras = ["dotenv"], version = "^1.9.0" }
loguru = "^0.6.0"
sqlmodel = "^0.0.6"
asyncpg = "^0.25.0"
requests = "^2.28.1"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
flake8 = "^3.7"
bandit = "^1.6.2"
pytest = "^6.0.1"
pymongo = "^3.11.0"
isort = "^5.7.0"
flake8-eradicate = "^1.0.0"
flake8-print = "^4.0.0"
flake8-use-fstring = "^1.1.0"
fastapi-code-generator = "^0.3.5"

[tool.pylint]
extension-pkg-whitelist = ["orjson"]

[tool.pylint.messages_control]
disable = [
    "relative-beyond-top-level",
    "format", # handled by black
    "invalid-name",
    "missing-function-docstring",
    "missing-module-docstring"
]

[tool.black]
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.vscode
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
api = "social_links_service:main"

